--- a/.codebuild/ci/buildspec.yml
+++ b/.codebuild/ci/buildspec.yml
@@ -2,17 +2,14 @@ version: 0.2
 phases:
   pre_build: 
     commands:
-      - echo 最初の時点で diff_target がどうなってるか
-      - find ./diff_target
-      - mv diff_target diff_target_old
-      - git reset --hard HEAD
+      - echo 最初の時点で diff_target_old がどうなってるか
+      - cat ./diff_target_old/change.txt
   build:
     commands:
       - echo これが表示されるだけ、のはずなんですがねぇ。しらんけど。
       - find .
-      - cat ./diff_target/change.txt
       - cat ./diff_target_old/change.txt
-      - diff ./diff_target/change.txt ./diff_target_old/change.txt || echo "change.txtに変化が在った。"
+      - date > ./diff_target_old/change.txt
 cache:
   paths:
-    - diff_target/change.txt
+    - diff_target_old/change.txt
