--- a/.codebuild/ci/buildspec.yml
+++ b/.codebuild/ci/buildspec.yml
@@ -2,11 +2,11 @@ version: 0.2
 phases:
   build:
     commands:
-      - diff ./change.txt ./last/change.txt || echo '変化あり'
+      - diff ./change.txt /tmp/lastbuild/change.txt || echo '変化あり'
   post_build:
     commands:
-      - mkdir -p ./last
-      - cp change.txt ./last/change.txt
+      - mkdir -p /tmp/lastbuild
+      - cp change.txt /tmp/lastbuild/change.txt
 cache:
   paths:
-    - last/**/*
+    - /tmp/lastbuild/**/*
